namespace and partial

--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -1,6 +1,4 @@
-<h1>edit post</h1>
-
-<%= form_for @post do |f|%>
+<%= form_for [:admin,@post] do |f|%>
   <%= f.label :title %><br>
   <%= f.text_field :title %><br>
   <br>
