--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -25,7 +25,10 @@
     <%= form.label :publish_at %>
     <%= form.number_field :publish_at %>
   </div>
-
+  <div class="field">
+    <%= form.label :author_id %>
+    <%= form.number_field :author_id %>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
