--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,6 +14,10 @@
   <strong>Publish at:</strong>
   <%= @book.publish_at %>
 </p>
+<p>
+  <strong>author name:</strong>
+  <%= @author.name%>
+</p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
